# dipen

./: .gitignore  Cargo.toml  LICENSE  Readme.md  benchmark.txt  rustfmt.toml  todos.txt
dipen/: Cargo.toml
dipen-py/: Cargo.toml  dipen.pyi  pyproject.toml
dipen-py/examples/: 01_endless_loop.py  03_in_memory.py
dipen-py/python-src/dipen/: __init__.py
dipen-py/src/: asyncio.rs  contexts.rs  endless_loop.rs  error.rs  etcd.rs  exec.rs  in_memory.rs  lib.rs  logging.rs  net.rs  registry.rs  run.rs
dipen-py/src/common/: transitions.rs
dipen-py/src/common/transitions/: delayed_move.rs  initialize.rs
dipen-py/src/contexts/: create.rs  run.rs  start.rs  validate.rs
dipen/benches/: locking.rs  plot_throughput.rs  single_node.rs
dipen/benches/common/: transitions.rs
dipen/benches/common/transitions/: initialize.rs  move.rs
dipen/diagrams/: bench-single-node.dot  getting-started.dot  locking-opt.dot  minimal-graph-finished1.dot  minimal-graph-finished2.dot  minimal-graph-firing.dot  minimal-graph-start.dot  minimal-graph.dot  possible-arcs.dot  run-graphviz.bash
dipen/examples/: 01-endless-loop.rs  02-split-loop.rs  03-in-memory.rs
dipen/examples/common/: mod.rs
dipen/examples/common/transitions/: delayed_move.rs  initialize.rs
dipen/src/: error.rs  etcd.rs  etcd_gate.rs  exec.rs  lib.rs  net.rs  runner.rs  state.rs  storage.rs  transition_runner.rs
dipen/src/etcd/: common.rs  gate.rs  place_locks.rs  transition.rs
dipen/src/exec/: create.rs  run.rs  start.rs  transition.rs  validate.rs
dipen/src/net/: builder.rs  change.rs  common.rs  net_state.rs
dipen/src/runner/: context.rs  dispatch.rs  main.rs  registry.rs  transition.rs
dipen/src/runner/context/: create.rs  run.rs  start.rs  validate.rs
dipen/src/state/: place_locks.rs
dipen/src/storage/: etcd.rs  in_memory.rs  traits.rs
dipen/src/storage/etcd/: client.rs  place_locks.rs  transition.rs
dipen/src/storage/in_memory/: client.rs  place_locks.rs  transition.rs
dipen/src/storage/traits/: client.rs  place_locks.rs  transition.rs
petri-etcd-playground/: Cargo.toml
petri-etcd-playground/src/: main.rs
petri-etcd-runner/: Cargo.toml
petri-etcd-runner/benches/: single_node.rs  string_benchmark.rs
petri-etcd-runner/benches/common/: transitions.rs
petri-etcd-runner/benches/common/transitions/: initialize.rs  move.rs
petri-etcd-runner/examples/: 01-endless-loop.rs  02-split-loop.rs
petri-etcd-runner/examples/common/transitions/: delayed_move.rs  initialize.rs
petri-etcd-runner/src/: error.rs  etcd_gate.rs  lib.rs  net.rs  place_locks.rs  runner.rs  transition.rs  transition_runner.rs
petri-etcd-runner/src/net/: builder.rs  change.rs  common.rs  net_state.rs
