[package]
name = "dipen-py"
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dipen_py"
crate-type = ["cdylib"]
doc= false # no docs for the bindings

[dependencies]
dipen = { version = "0.1.0", path = "../dipen" }
etcd-client = "0.14.0"
pyo3 = "0.23.3"
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.12.1"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
