[package]
name = "petri-etcd-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.14.0"
petri-etcd-runner = { version = "0.1.0", path = "../petri-etcd-runner" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
