[package]
name = "petri-etcd-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.2"
etcd-client = "0.14.0"
futures = "0.3.31"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tracing = { version = "0.1.41", features = ["async-await"] }
